# rag-pipeline

./: README.md
backend_service/: pyproject.toml
backend_service/src/modal_app/: common.py  discord.py  main.py
frontend_service/: index.html  package.json
frontend_service/src/: App.tsx  vite-env.d.ts
