[project]
name = "modal-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.4",
    "modal>=1.3.2",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
modal-app = "modal_app:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
